# CheckAppDevice

./: .gitignore  README.md  README_CN.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/deviceveil/guard/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt  corner_monit.cpp
app/src/main/cpp/Foundation/: HookFunction.cpp  IOReplace.cpp  KeymasterHook.cpp  SandboxFs.cpp  SensorHook.cpp  Symbol.cpp
app/src/main/cpp/Foundation/syscall/: BinarySyscallFinder.cpp
app/src/main/cpp/include/: HookFunction.h  IOReplace.h  KeymasterHook.h  SandboxFs.h  SensorHook.h  dobby.h  log.h  main.h
app/src/main/java/com/deviceveil/guard/: AccountFakeHook.java  AdIdFakeHook.java  AppSetIdFakeHook.java  BehaviorFingerprintHook.java  BinderHook.java  BootTimeFakeHook.java  BootloaderFakeHook.java  CanvasFakeHook.java  ClipboardFakeHook.java  CmdAndFileLogger.java  ConfigManager.java  ConfigProvider.java  Constants.java  DeviceLogger.java  FakeData.java  FakeDeviceModule.java  FlutterRnHook.java  FontListFakeHook.java  GPUFakeHook.java  HookInit.java  IntegrityCheckHook.java  LocationFakeHook.java  MainActivity.java  MissingInfoHook.java  ModuleConfig.java  ModuleRuntime.java  MonitorEventReceiver.java  MonitorEventStore.java  (+11 more)
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+2 files in other folders)
